--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   Site publié sur Github
+  
+  <iframe src="https://calendar.google.com/calendar/embed?src=6pp0qsknv9gkhq24b5bep23l3aq9ha3p%40import.calendar.google.com&ctz=Europe%2FParis" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
