--- a/game.html
+++ b/game.html
@@ -10,14 +10,63 @@
     }
   </style>
   <script>
-   function _0x5da9(){const _0x2afb78=['👦🚣➡️🌊➡️🏝️➡️💀➡️💰➡️🏴‍☠️','11mszhso','🚂🧙‍♂️👦⚡➡️🏰📚➡️🐍🧹➡️🦉🔮','🧙‍♀️🧹➡️🌪️➡️👠✨➡️🦁🤖🌾➡️🧙‍♂️🎈','forêt','seigneur\x20des\x20anneaux','chroniques\x20de\x20narnia','🧔🏽🔪➡️👩🔪➡️🌹➡️📜🖋️➡️🇫🇷🏰','robinson\x20crusoé','lotr','🧛‍♂️➡️🏰➡️🔪➡️👩🩸➡️🌅','score','pays\x20des\x20merveilles','maïs','île\x20au\x20trésor','Score:\x20','cyrano\x20de\x20bergerac','🎩🎓🔬➡️🐇⌚➡️🕳️➡️🎉👑🐛➡️🍄➡️🃏🌹','planète\x20Mars','5BSgacQ','gretel','perle','hansel','les\x20champs\x20de\x20maïs','🚢➡️🏝️➡️📙➡️🥥➡️🔥➡️👬➡️🌊','frankenstein','les\x20chroniques\x20de\x20narnia','1142UhNsux','tour\x20du\x20monde','islam','french','🐺🌕➡️🏞️➡️🐾➡️🌲➡️🐺➡️🌕','la\x20petite\x20sirène','champs\x20de\x20maïs','moby','story','🧙‍♂️➡️💍➡️👦➡️🚶‍♂️🌋➡️🧝‍♂️🧚🏽‍♂️🧔🏽👨‍🦳➡️👹➡️🕷️➡️💔➡️🦅➡️💍🌋➡️✌️','192eRVlTb','👸➡️👑🦹‍♀️➡️🌲➡️🏠➡️🪄7️⃣🕴️➡️🍎➡️💤➡️🤴➡️💋➡️🎉','alice\x20au\x20pays\x20des\x20merveilles','dracula','value','👩📚➡️🚪🌌➡️🦁🧙‍♀️🚪➡️✨🏰👑','jeune\x20fille\x20à\x20la\x20perle','16412spwXDI','sherlock\x20holmes','12504740cwMeGI','la\x20jeune\x20fille\x20à\x20la\x20perle','39834zQVxqi','🐳🎣➡️🌊➡️🚢⛵➡️🔱➡️🌪️','🕵️‍♂️🔍➡️🔦➡️📰➡️💼➡️🔬','result','blanche\x20neige\x20et\x20les\x20sept\x20nains','voyage','entretien\x20avec\x20un\x20vampire','getElementById','voyage\x20sur\x20la\x20planète\x20Mars','🧜‍♀️➡️👸➡️🤴➡️🏰➡️💏','petite\x20sirène','le\x20roi\x20lion','roi\x20lion','narnia','👨‍🔬➡️🧪➡️👹➡️🏃‍♀️➡️❄️➡️⛄➡️🔥','robin\x20des\x20bois','80\x20jours','holmes','hansel\x20et\x20gretel','le\x20fantôme\x20de\x20l\x27opéra','harry\x20potter','3684462zmMChz','🦇👦➡️🧛‍♂️➡️💀➡️🔦➡️🌃','464emRqXh','🧞‍♂️➡️🪔➡️👦➡️👑➡️👸➡️🐯➡️🤴','appel\x20de\x20la\x20forêt','innerText','1111656BkyIkM','2388972spPElj','vampire','aladin','frenchGuess','length','🕋➡️👤➡️📖➡️☪️➡️🙏➡️5️⃣➡️🕌➡️🌍➡️🌙➡️🎉','robin','magicien\x20d\x27Oz','Bravo!','fantôme\x20de\x20l\x27opéra','cyrano'];_0x5da9=function(){return _0x2afb78;};return _0x5da9();}function _0x3d1e(_0x687a5d,_0x3f7569){const _0x5da964=_0x5da9();return _0x3d1e=function(_0x3d1ea5,_0xd714d){_0x3d1ea5=_0x3d1ea5-0x139;let _0x104347=_0x5da964[_0x3d1ea5];return _0x104347;},_0x3d1e(_0x687a5d,_0x3f7569);}const _0x58ad14=_0x3d1e;(function(_0xcea3de,_0x32a1a3){const _0x3aa5d7=_0x3d1e,_0x43a82d=_0xcea3de();while(!![]){try{const _0x1141f7=-parseInt(_0x3aa5d7(0x155))/0x1+parseInt(_0x3aa5d7(0x144))/0x2*(-parseInt(_0x3aa5d7(0x14e))/0x3)+-parseInt(_0x3aa5d7(0x175))/0x4*(parseInt(_0x3aa5d7(0x13c))/0x5)+-parseInt(_0x3aa5d7(0x16e))/0x6+parseInt(_0x3aa5d7(0x174))/0x7+-parseInt(_0x3aa5d7(0x170))/0x8*(-parseInt(_0x3aa5d7(0x159))/0x9)+-parseInt(_0x3aa5d7(0x157))/0xa*(-parseInt(_0x3aa5d7(0x181))/0xb);if(_0x1141f7===_0x32a1a3)break;else _0x43a82d['push'](_0x43a82d['shift']());}catch(_0x5cb19e){_0x43a82d['push'](_0x43a82d['shift']());}}}(_0x5da9,0x62132));const stories=[{'emoji':_0x58ad14(0x14d),'french':'le\x20seigneur\x20des\x20anneaux','keywords':[_0x58ad14(0x185),_0x58ad14(0x189)]},{'emoji':_0x58ad14(0x14f),'french':_0x58ad14(0x15d),'keywords':['blanche\x20neige','nain']},{'emoji':_0x58ad14(0x17a),'french':'histoire\x20de\x20l\x27islam','keywords':[_0x58ad14(0x146)]},{'emoji':_0x58ad14(0x141),'french':_0x58ad14(0x188),'keywords':[_0x58ad14(0x188),'crusoé']},{'emoji':_0x58ad14(0x18a),'french':'dracula','keywords':[_0x58ad14(0x151)]},{'emoji':_0x58ad14(0x13a),'french':_0x58ad14(0x150),'keywords':['alice',_0x58ad14(0x18c)]},{'emoji':'👦👧➡️🍞🔥➡️🌲➡️🏠🍬➡️🧙‍♀️➡️🔥','french':_0x58ad14(0x16b),'keywords':[_0x58ad14(0x13f),_0x58ad14(0x13d)]},{'emoji':_0x58ad14(0x171),'french':_0x58ad14(0x177),'keywords':[_0x58ad14(0x177)]},{'emoji':'🦁👑➡️🦁👦➡️🐗🦜➡️👑➡️🔥➡️✌️','french':_0x58ad14(0x164),'keywords':[_0x58ad14(0x165)]},{'emoji':_0x58ad14(0x162),'french':_0x58ad14(0x149),'keywords':[_0x58ad14(0x163)]},{'emoji':_0x58ad14(0x167),'french':_0x58ad14(0x142),'keywords':[_0x58ad14(0x142)]},{'emoji':'🚶‍♂️🎒➡️🌎➡️🌲🌳➡️🐻🦊➡️🌊','french':'le\x20tour\x20du\x20monde\x20en\x2080\x20jours','keywords':[_0x58ad14(0x145),_0x58ad14(0x169)]},{'emoji':_0x58ad14(0x183),'french':'le\x20magicien\x20d\x27Oz','keywords':[_0x58ad14(0x17c),'Oz']},{'emoji':_0x58ad14(0x153),'french':_0x58ad14(0x143),'keywords':[_0x58ad14(0x186),_0x58ad14(0x166)]},{'emoji':_0x58ad14(0x16f),'french':_0x58ad14(0x15f),'keywords':['entretien\x20avec\x20un\x20vampire',_0x58ad14(0x176)]},{'emoji':_0x58ad14(0x182),'french':_0x58ad14(0x16d),'keywords':[_0x58ad14(0x16d)]},{'emoji':'👩🎻➡️👻🎭➡️💔➡️🎼➡️🎉','french':_0x58ad14(0x16c),'keywords':[_0x58ad14(0x17e),'opéra']},{'emoji':_0x58ad14(0x15b),'french':_0x58ad14(0x156),'keywords':['sherlock\x20holmes',_0x58ad14(0x16a)]},{'emoji':'🏹👑➡️🌲➡️🦊➡️💰➡️🏰➡️🎯','french':_0x58ad14(0x168),'keywords':[_0x58ad14(0x168),_0x58ad14(0x17b)]},{'emoji':_0x58ad14(0x187),'french':_0x58ad14(0x139),'keywords':['cyrano\x20de\x20bergerac',_0x58ad14(0x17f)]},{'emoji':_0x58ad14(0x15a),'french':'moby\x20dick','keywords':['moby\x20dick',_0x58ad14(0x14b)]},{'emoji':_0x58ad14(0x180),'french':'l\x27île\x20au\x20trésor','keywords':[_0x58ad14(0x18e),'trésor']},{'emoji':'👨‍🌾🌽➡️🌪️➡️👽🛸➡️🌾➡️📡','french':_0x58ad14(0x140),'keywords':[_0x58ad14(0x14a),_0x58ad14(0x18d)]},{'emoji':'👨‍🎨➡️🖼️➡️👩➡️💐➡️💌➡️🇳🇱','french':_0x58ad14(0x158),'keywords':[_0x58ad14(0x154),_0x58ad14(0x13e)]},{'emoji':_0x58ad14(0x148),'french':'appel\x20de\x20la\x20forêt','keywords':[_0x58ad14(0x172),_0x58ad14(0x184)]},{'emoji':'🚀➡️🔴🌌➡️🤖➡️👨‍🚀➡️👩‍🚀➡️🌍','french':_0x58ad14(0x161),'keywords':[_0x58ad14(0x15e),_0x58ad14(0x13b),'Mars']}];let currentStory=null,score=0x0;function newStory(){const _0x111f18=_0x58ad14,_0x4c96d9=stories[Math['floor'](Math['random']()*stories[_0x111f18(0x179)])];document[_0x111f18(0x160)](_0x111f18(0x14c))[_0x111f18(0x173)]=_0x4c96d9['emoji'],currentStory=_0x4c96d9;}function validateGuess(){const _0x2081bd=_0x58ad14,_0x45fad9=document[_0x2081bd(0x160)](_0x2081bd(0x178))[_0x2081bd(0x152)];_0x45fad9===currentStory[_0x2081bd(0x147)]?(score+=0x5,document[_0x2081bd(0x160)](_0x2081bd(0x15c))[_0x2081bd(0x173)]=_0x2081bd(0x17d)):(score-=0x1,document[_0x2081bd(0x160)](_0x2081bd(0x15c))[_0x2081bd(0x173)]='Essaye\x20encore!'),document[_0x2081bd(0x160)](_0x2081bd(0x18b))[_0x2081bd(0x173)]=_0x2081bd(0x18f)+score,document['getElementById'](_0x2081bd(0x178))[_0x2081bd(0x152)]='';}
- 
-  function displaySolution() {
-        document.getElementById("story").innerText = currentStory.french;
-        document.getElementById("solution-btn").style.display = "none";
-        score -= 10;
-        document.getElementById("score").innerText = "Score: " + score;
-      }
+    const stories = [
+      { emoji: "🧙‍♂️➡️💍➡️👦➡️🚶‍♂️🌋➡️🧝‍♂️🧚🏽‍♂️🧔🏽👨‍🦳➡️👹➡️🕷️➡️💔➡️🦅➡️💍🌋➡️✌️", french: "le seigneur des anneaux", keywords: ["seigneur des anneaux", "lotr"] },
+      { emoji: "👸➡️👑🦹‍♀️➡️🌲➡️🏠➡️🪄7️⃣🕴️➡️🍎➡️💤➡️🤴➡️💋➡️🎉", french: "blanche neige et les sept nains", keywords: ["blanche neige", "nain"] },
+      { emoji: "🕋➡️👤➡️📖➡️☪️➡️🙏➡️5️⃣➡️🕌➡️🌍➡️🌙➡️🎉", french: "histoire de l'islam", keywords: ["islam"] },
+      { emoji: "🚢➡️🏝️➡️📙➡️🥥➡️🔥➡️👬➡️🌊", french: "robinson crusoé", keywords: ["robinson crusoé", "crusoé"] },
+      { emoji: "🧛‍♂️➡️🏰➡️🔪➡️👩🩸➡️🌅", french: "dracula", keywords: ["dracula"] },
+      { emoji: "🎩🎓🔬➡️🐇⌚➡️🕳️➡️🎉👑🐛➡️🍄➡️🃏🌹", french: "alice au pays des merveilles", keywords: ["alice", "pays des merveilles"] },
+      { emoji: "👦👧➡️🍞🔥➡️🌲➡️🏠🍬➡️🧙‍♀️➡️🔥", french: "hansel et gretel", keywords: ["hansel", "gretel"] },
+  { emoji: "🧞‍♂️➡️🪔➡️👦➡️👑➡️👸➡️🐯➡️🤴", french: "aladin", keywords: ["aladin"] },
+  { emoji: "🦁👑➡️🦁👦➡️🐗🦜➡️👑➡️🔥➡️✌️", french: "le roi lion", keywords: ["roi lion"] },
+  { emoji: "🧜‍♀️➡️👸➡️🤴➡️🏰➡️💏", french: "la petite sirène", keywords: ["petite sirène"] },
+  { emoji: "👨‍🔬➡️🧪➡️👹➡️🏃‍♀️➡️❄️➡️⛄➡️🔥", french: "frankenstein", keywords: ["frankenstein"] },
+  { emoji: "🚶‍♂️🎒➡️🌎➡️🌲🌳➡️🐻🦊➡️🌊", french: "le tour du monde en 80 jours", keywords: ["tour du monde", "80 jours"] },
+  { emoji: "🧙‍♀️🧹➡️🌪️➡️👠✨➡️🦁🤖🌾➡️🧙‍♂️🎈", french: "le magicien d'Oz", keywords: ["magicien d'Oz", "Oz"] },
+  { emoji: "👩📚➡️🚪🌌➡️🦁🧙‍♀️🚪➡️✨🏰👑", french: "les chroniques de narnia", keywords: ["chroniques de narnia", "narnia"] },
+  { emoji: "🦇👦➡️🧛‍♂️➡️💀➡️🔦➡️🌃", french: "entretien avec un vampire", keywords: ["entretien avec un vampire", "vampire"] },
+  { emoji: "🚂🧙‍♂️👦⚡➡️🏰📚➡️🐍🧹➡️🦉🔮", french: "harry potter", keywords: ["harry potter"] },
+  { emoji: "👩🎻➡️👻🎭➡️💔➡️🎼➡️🎉", french: "le fantôme de l'opéra", keywords: ["fantôme de l'opéra", "opéra"] },
+  { emoji: "🕵️‍♂️🔍➡️🔦➡️📰➡️💼➡️🔬", french: "sherlock holmes", keywords: ["sherlock holmes", "holmes"] },
+{ emoji: "🏹👑➡️🌲➡️🦊➡️💰➡️🏰➡️🎯", french: "robin des bois", keywords: ["robin des bois", "robin"] },
+{ emoji: "🧔🏽🔪➡️👩🔪➡️🌹➡️📜🖋️➡️🇫🇷🏰", french: "cyrano de bergerac", keywords: ["cyrano de bergerac", "cyrano"] },
+{ emoji: "🐳🎣➡️🌊➡️🚢⛵➡️🔱➡️🌪️", french: "moby dick", keywords: ["moby dick", "moby"] },
+{ emoji: "👦🚣➡️🌊➡️🏝️➡️💀➡️💰➡️🏴‍☠️", french: "l'île au trésor", keywords: ["île au trésor", "trésor"] },
+{ emoji: "👨‍🌾🌽➡️🌪️➡️👽🛸➡️🌾➡️📡", french: "les champs de maïs", keywords: ["champs de maïs", "maïs"] },
+{ emoji: "👨‍🎨➡️🖼️➡️👩➡️💐➡️💌➡️🇳🇱", french: "la jeune fille à la perle", keywords: ["jeune fille à la perle", "perle"] },
+{ emoji: "🐺🌕➡️🏞️➡️🐾➡️🌲➡️🐺➡️🌕", french: "appel de la forêt", keywords: ["appel de la forêt", "forêt"] },
+{ emoji: "🚀➡️🔴🌌➡️🤖➡️👨‍🚀➡️👩‍🚀➡️🌍", french: "voyage sur la planète Mars", keywords: ["voyage", "planète Mars", "Mars"] }
+];
+let currentStory = null;
+let score = 0;
+
+function newStory() {
+  const story = stories[Math.floor(Math.random() * stories.length)];
+  document.getElementById('story').innerText = story.emoji;
+  currentStory = story;
+}
+
+function validateGuess() {
+  const frenchGuess = document.getElementById('frenchGuess').value;
+
+  if (frenchGuess === currentStory.french) {
+    score += 5;
+    document.getElementById('result').innerText = 'Bravo!';
+  } else {
+    score -= 1;
+    document.getElementById('result').innerText = 'Essaye encore!';
+  }
+  document.getElementById('score').innerText = `Score: ${score}`;
+  document.getElementById('frenchGuess').value = '';
+}
+
+function showSolution() {
+  document.getElementById('solution').innerText = currentStory.french;
+  score -= 10;
+  document.getElementById('score').innerText = `Score: ${score}`;
+}
+
   </script>
 </head>
 <body>
@@ -25,7 +74,7 @@
   <p id="story"></p>
   <input id="frenchGuess" placeholder="Devinez en français" />
   <button onclick="validateGuess()">Valider</button>
-  <button onclick="displaySolution">Afficher la solution</button>
+  <button onclick="showSolution()">Afficher solution</button>
   <p id="result"></p>
   <p id="score">Score: 0</p>
   
