--- a/game.html
+++ b/game.html
@@ -72,6 +72,8 @@ function showSolution() {
 <body>
   <button onclick="newStory()">Jouer</button>
   <p id="story"></p>
+  <p id="solution"></p>
+
   <input id="frenchGuess" placeholder="Devinez en français" />
   <button onclick="validateGuess()">Valider</button>
   <button onclick="showSolution()">Afficher solution</button>
