--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <button id="startButton">Start Bot</button>
 
-  <script src="leekwarsbot.js"></script>
+  <script src="autofarm.js"></script>
   <script>
     document.getElementById('startButton').addEventListener('click', function() {
       const login = document.getElementById('loginInput').value;
