--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <button id="startButton">Start Bot</button>
 
   <script src="autofarm.js"></script>
-  <script>
-    document.getElementById('startButton').addEventListener('click', function() {
-      const login = document.getElementById('loginInput').value;
-      const password = document.getElementById('passwordInput').value;
-      const bot = new LeekWarsBot(login, password, false);
-      bot.run();
-    });
-  </script>
+<script>
+  document.getElementById('startButton').addEventListener('click', async function() {
+    const login = document.getElementById('loginInput').value;
+    const password = document.getElementById('passwordInput').value;
+    const bot = new LeekWarsBot(login, password);
+    await bot.startProgram();
+  });
+</script>
 </body>
 </html>
