--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         { text: "La classification TIER vise à évaluer/définir le niveau d'intégrité d'un datacenter.", answer: 'faux' },
         { text: "La classification TIER va de 1 à 4.", answer: 'vrai' },
         { text: "Dans une classification TIER, tout est au moins doublé (climatisation, électricité, réseau, etc.).", answer: 'vrai' },
-        { text: "ne vulnérabilité est quelque chose de potentiel et un risque rend possible la vulnérabilité.", answer: 'faux' },
+        { text: "une vulnérabilité est quelque chose de potentiel et un risque rend possible la vulnérabilité.", answer: 'faux' },
         { text: "Le seuil correspond au niveau de criticité en dessous duquel nous allons tolérer les risques identifiés.", answer: 'vrai' },
         { text: "Un risque brut correspond à un risque avant l'application d'une mesure.", answer: 'vrai' },
         { text: "Le secret de Shamir consiste à découper un secret en n parmi m avec n > m", answer: 'faux' },
@@ -90,7 +90,34 @@
         { text: "Loi informatique et liberté = 1978 ?", answer: 'vrai' },
         { text: "Commission national et liberté infligé amende", answer: 'vrai' },
         { text: "RGPD -> conduire la CNIL pour infliger des amendes ?", answer: 'vrai' },
-        { text: "La loi Godfrain punit le maintien sur un STAD?", answer: 'faux' },
+        { text: "La loi Godfrain punit le maintien sur un STAD?", answer: 'vrai' },
+        { text: "SIEM signifie security information event management?", answer: 'vrai' },
+        { text: "CVE = Score d'une vulnérabilité?", answer: 'faux' },
+        { text: "CVE = Identifiant d'une vulnérabilité", answer: 'vrai' },
+        { text: "NIS signifie Network information security", answer: 'vrai' },
+        { text: "NIS est imposé aux OSE", answer: 'vrai' },
+        { text: "OSE est un Operateur de service existant", answer: 'faux' },
+        { text: "OSE est un Operateur de service essentiel", answer: 'vrai' },
+        { text: "l'equivalent français du patriot act est le LSQ", answer: 'vrai' },
+        { text: "LSQ signifie loi sur la sécurité quotidienne", answer: 'vrai' },
+        { text: "DPO signifie data protection officer", answer: 'vrai' },
+        { text: "RGPD signifie règlement général sur la protection des données", answer: 'vrai' },
+        { text: "RGPD a été créé en 1999", answer: 'faux' },
+        { text: "RGPD a été créé en 2016", answer: 'vrai' },
+        { text: "RGPD sanctionne a hauteur de 10% du CA mondial de l'entreprise", answer: 'faux' },
+        { text: "RGPD sanctionne de 2 a 4% du CA mondial de l'entreprise", answer: 'vrai' },
+        { text: "Le projet safari est la liaison des données de police avec les fichiers de l'INSEE ", answer: 'vrai' },
+        { text: "RTA signfiie Recovery Time Objective", answer: 'vrai' },
+        { text: "RTA signfiie Recovery Point Objective", answer: 'vrai' },
+        { text: "le PRA est la méthodologie du redémarrage de toute l'infra réseau pour la reprise d'activité", answer: 'vrai' },
+        { text: "RPO peut se traduire par la durée maximale d'interruption admissible d'une ressource", answer: 'faux' },
+        { text: "RTO désigne la durée maximum d'enregistrement des données qu'il est acceptable de perdre lors d'une panne", answer: 'faux' },
+
+
+
+
+
+
     ];
 
     function startQuiz() {
