--- a/index.html
+++ b/index.html
@@ -107,11 +107,22 @@
         { text: "RGPD sanctionne a hauteur de 10% du CA mondial de l'entreprise", answer: 'faux' },
         { text: "RGPD sanctionne de 2 a 4% du CA mondial de l'entreprise", answer: 'vrai' },
         { text: "Le projet safari est la liaison des données de police avec les fichiers de l'INSEE ", answer: 'vrai' },
-        { text: "RTA signfiie Recovery Time Objective", answer: 'vrai' },
-        { text: "RTA signfiie Recovery Point Objective", answer: 'vrai' },
+        { text: "RTA signifie Recovery Time Objective", answer: 'vrai' },
+        { text: "RTA signifie Recovery Point Objective", answer: 'vrai' },
         { text: "le PRA est la méthodologie du redémarrage de toute l'infra réseau pour la reprise d'activité", answer: 'vrai' },
         { text: "RPO peut se traduire par la durée maximale d'interruption admissible d'une ressource", answer: 'faux' },
         { text: "RTO désigne la durée maximum d'enregistrement des données qu'il est acceptable de perdre lors d'une panne", answer: 'faux' },
+        { text: "Les CVSS ont trois métriques pour mesurer la sévérité d'une vulnérabilité ?", answer: 'vrai' },
+        { text: "Les CVSS ont une plage de valeur de sévérité allant de 0 à 10 inclus", answer: 'vrai' },
+        { text: "Plus la valeur de CVSS est haute, moins la vulnérabilité est grave", answer: 'faux' },
+        { text: "Une CVE a un cycle de vie et sa CVSS peut évoluer", answer: 'vrai' },
+        { text: "CVE veut dire Common Vulnerability Exposure ", answer: 'vrai' },
+        { text: "Un hash a besoin d'une clée privée", answer: 'faux' },
+        { text: "Pour communiquer entre deux personnes en symétrique, il faut 1 clé", answer: 'vrai' },
+        { text: "Pour communiquer entre deux personnes en asymétrique, il faut 4 clé", answer: 'vrai' },
+        { text: "SHA-256, MD5 sont des algos de hash", answer: 'vrai' },
+        { text: "MD5 est un algo de hash toujours d'actualité", answer: 'faux' },
+        { text: "RSA est un algo de chiffrement symétrique", answer: 'faux' }
 
 
 
