--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
         { text: "Pour communiquer entre deux personnes en asymétrique, il faut 4 clé", answer: 'vrai' },
         { text: "SHA-256, MD5 sont des algos de hash", answer: 'vrai' },
         { text: "MD5 est un algo de hash toujours d'actualité", answer: 'faux' },
-        { text: "RSA est un algo de chiffrement symétrique", answer: 'faux' }
+        { text: "RSA est un algo de chiffrement symétrique", answer: 'faux' },
+        { text: "El gamal est un algo de chiffrement Symétrique", answer: 'faux' },
+        { text: "Un algo symétrique est plus rapide qu'un algo asymétrique", answer: 'vrai' },
+        { text: "Un algo asymétrique est plus lent qu'un algo symétrique", answer: 'vrai' },
+        { text: "RSA est un algo de chiffrement symétrique", answer: 'faux' },
+
 
 
 
