--- a/index.html
+++ b/index.html
@@ -125,13 +125,12 @@
         { text: "Un algo symétrique est plus rapide qu'un algo asymétrique", answer: 'vrai' },
         { text: "Un algo asymétrique est plus lent qu'un algo symétrique", answer: 'vrai' },
         { text: "RSA est un algo de chiffrement symétrique", answer: 'faux' },
-
-
-
-
-
-
-
+        { text: "Un algo asymétrique est plus lent qu'un algo symétrique", answer: 'vrai' },
+        { text: "Un algo asymétrique est plus rapide qu'un algo symétrique", answer: 'faux' },
+        { text: "Pour asymétrique on a besoin d'un canal protégé symétrique pour échanger la clef privée", answer: 'faux' },
+        { text: "Nb de clefs necessaire pour dialoger 2 a 2 pour un algo symétrique = 2x", answer: 'faux' },
+        { text: "Nb de clefs necessaire pour dialoger 2 a 2 pour un algo asymétrique = x(x-1)/2", answer: 'faux' },
+        { text: "Diffie Hellman est un algo symétrique", answer: 'faux' },
     ];
 
     function startQuiz() {
