--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         { text: "Que ce soit au niveau de la loi Informatique et Libertés ou du RGPD, il est interdit de collecter certains types de données.", answer: 'faux' },
         { text: "DPO est un rôle joué par quelqu'un dans une entreprise qui veille à la bonne mise en œuvre de la loi Informatique et Libertés. ", answer: 'faux' },
         { text: "Les pays européens ont eu un délai de trois ans pour transposer le RGPD en droits nationaux.", answer: 'faux' },
-        { text: "La loi Godfrain ne punit que le maintien le maintien frauduleux sur un STAD. ", answer: 'faux' },
+        { text: "La loi Godfrain ne punit que le maintien frauduleux sur un STAD. ", answer: 'faux' },
         { text: "La loi Godfrain figure dans le code civil.", answer: 'faux' },
         { text: "La LSQ est l'équivalent du Patriot Act.", answer: 'vrai' },
         { text: "La classification TIER vise à évaluer/définir le niveau d'intégrité d'un datacenter.", answer: 'faux' },
