--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         { text: "Longue de la clé determine le nombre de round (rsa)", answer: 'vrai' },
         { text: "Loi informatique et liberté = 1990 ?", answer: 'faux' },
         { text: "Loi informatique et liberté = 1978 ?", answer: 'vrai' },
-        { text: "Commission national et liberté infligé amende", answer: 'vrai' },
+        { text: "La commission national et liberté peut infliger amende", answer: 'vrai' },
         { text: "RGPD -> conduire la CNIL pour infliger des amendes ?", answer: 'vrai' },
         { text: "La loi Godfrain punit le maintien sur un STAD?", answer: 'vrai' },
         { text: "SIEM signifie security information event management?", answer: 'vrai' },
