--- a/quizzPolitique.html
+++ b/quizzPolitique.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">QCM sur ISO/IEC 27001</h1>
+        <h1 class="text-center mb-4">QCM sur les Animes!</h1>
         <div id="question" class="h4 mb-3"></div>
         <ul id="options" class="list-group"></ul>
         <div id="score" class="mt-3"></div>
