--- a/quizzPolitique.html
+++ b/quizzPolitique.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="text-center mb-4">QCM sur les Animes!</h1>
+        <img id="questionImage" src="" alt="Image de la question" style="max-width: 100%; display: none; margin-bottom: 20px;">
         <div id="question" class="h4 mb-3"></div>
         <ul id="options" class="list-group"></ul>
         <div id="score" class="mt-3"></div>
